# src/Infrastructure/dummyDataSetup/deleteEverything.ts
@@ -2,15 +2,19 @@ import { PrismaClient } from "@prisma/client";
 export const deleteEverything = async () => {
   const prisma = new PrismaClient();
   const deleteList = [
+    "of Selector Options deleted",
+    "of Subject Stats deleted",
     "of Questions deleted",
     "of Fee Details deleted",
     "of Students deleted",
   ];
+  const optionsMaster = prisma.optionsMaster.deleteMany();
   const studentLinkedSubjectStatics = prisma.subjectStatistics.deleteMany();
   const studentLinkedFeedetails = prisma.feeDetail.deleteMany();
   const questionsDelete = prisma.questions.deleteMany();
   const studentUnlinkedData = prisma.student.deleteMany();
   const deletedData = await prisma.$transaction([
+    optionsMaster,
     studentLinkedSubjectStatics,
     questionsDelete,
     studentLinkedFeedetails,
