# src/Infrastructure/dummyDataSetup/seed.ts
@@ -2,6 +2,7 @@ import { PrismaClient } from "@prisma/client";
 import { deleteEverything } from "./deleteEverything";
 import { questions } from "./questionBank";
 import { feeData, studentData, subjectStatics } from "./studentDeatils";
+import { optionsMasterData } from "./optionsMasterSeed";
 const prisma = new PrismaClient();
 
 async function main() {
@@ -18,8 +19,12 @@ async function main() {
   const studentsubjectStatics = await prisma.subjectStatistics.createMany({
     data: subjectStatics,
   });
+  const optionsMaster = await prisma.optionsMaster.create({
+    data: optionsMasterData,
+  });
 
   console.log(`
+  ${{ optionsMaster }} records of Selectors created.\n
   ${questionsCreate.count} records of Questions created.\n
   ${studentCreate.count} records of Student created.\n
   ${studentFeeDetails.count} records of Student Fee details created.\n
